# ded32_mipt_programming

./: LICENSE  README.md
differentiator/: CMakeLists.txt  README.md  input.txt  main.cpp  operation.cpp  operation.h  output.txt  parser.cpp  parser.h  run.sh
poet/: CMakeLists.txt  get_onegin.sh  main.cpp
processor/: CMakeLists.txt  README.md  assembler.h  main.cpp  processor.h  stack.cpp
processor/programs/factorial/: assemble.txt  disassemble.txt  source.txt
processor/programs/fibonacci/: assemble.txt  disassemble.txt  source.txt
square_equation/: CMakeLists.txt  Doxyfile  main.cpp  square_equation.cpp  square_equation.h  test.cpp
square_equation/doxygen/html/: index.html
square_equation/tests/: Makefile
strong_stack/: CMakeLists.txt  README.md  input.txt  log.txt  main.cpp  stack.cpp
